--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -74,8 +74,9 @@
                       </form>
 
                       <p class="mt-3 text-center">
-                        <a href="/password-reset/recoverpwd" class="btn btn-outline-secondary w-100 mt-2">Forgot your password?</a>
+                        <a href="/password-reset/recoverpwd" class="btn btn-outline-dark w-100 mt-2">Forgot your password?</a>
                       </p>
+                      
 
                       <p class="mt-3 text-center">
                         Don't have an account? <a href="/signup" class="btn btn-outline-dark w-100 mt-2">Sign up here</a>
