--- a/views/auth/passwordreset.ejs
+++ b/views/auth/passwordreset.ejs
@@ -38,6 +38,7 @@
 
                                             <!-- Password Reset Form -->
                                             <form method="POST" action="/password-reset/passwordreset" class="needs-validation" novalidate id="passwordResetForm">
+                                                <input type="hidden" name="resetCode" value="<%= token %>" />
                                                 <div class="mb-3">
                                                   <label for="new_password" class="form-label">New Password:</label>
                                                   <div class="input-group">
