--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -92,10 +92,10 @@
                         <div class="form-check mb-3">
                           <input class="form-check-input" type="checkbox" id="termsCheck" required />
                           <label class="form-check-label" for="termsCheck">
-                            I agree to the <a href="/terms-of-service.html" class="text-primary" target="_blank">Terms</a> and 
-                            <a href="/privacy-policy.html" class="text-primary" target="_blank">Conditions</a>
+                            I agree to the <a href="/terms-conditions.html" class="text-primary" target="_blank">Terms and Conditions</a>
                           </label>
                         </div>
+                        
                         
                         
 
