--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -92,7 +92,7 @@
                         <div class="form-check mb-3">
                           <input class="form-check-input" type="checkbox" id="termsCheck" required />
                           <label class="form-check-label" for="termsCheck">
-                            I agree to the <a href="/terms-conditions.html" class="text-primary" target="_blank">Terms and Conditions</a>
+                            I agree to the <a href="/terms" class="text-primary" target="_blank">Terms and Conditions</a>
                           </label>
                         </div>
                         
