--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -77,6 +77,7 @@
       </nav><!-- End Nav Menu -->
 
       <a class="btn-getstarted" href="/login">Login</a>
+      <a class="btn-getstarted" href="/help">Help</a>
 
     </div>
   </header><!-- End Header -->
