--- a/views/public/help.ejs
+++ b/views/public/help.ejs
@@ -184,7 +184,7 @@
     </div>
 
     <p>This guide will help you efficiently use SalesPILOT to manage your inventory, sales, and reporting. For more assistance, contact our support team.</p>
-    <a href="/" class="btn btn-lg bg-gradient-secondary w-30 mt-4 mb">Home</a>
-    <a href="/login" class="btn btn-lg bg-gradient-secondary w-30 mt-4 mb">Login</a>
+    <a href="/" class="btn btn-lg bg-gradient-primary w-30 mt-4 mb">Home</a>
+    <a href="/terms" class="btn btn-lg bg-gradient-primary w-30 mt-4 mb">Terms</a>
 </body>
 </html>
