--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -55,7 +55,7 @@
             <div class="card auth-card">
               <!-- Back to Home Button inside the card, aligned to the top-right -->
               <div class="top-nav">
-                <a href="/" class="btn btn-outline-dark rounded-pill shadow-sm">
+                <a href="/" class="btn btn-primary w-100 rounded-pill shadow-sm">
                   <i class="ri-home-4-line"></i> Back to Home
                 </a>
               </div>
@@ -79,16 +79,16 @@
                         </div>
   
                         <div class="text-center">
-                          <button type="submit" class="btn btn-lg bg-gradient-primary w-100 mt-4 mb-0">Login</button>
+                          <button type="submit" class="btn btn-primary w-100">Login</button>
                         </div>
                       </form>
   
                       <p class="mt-3 text-center">
-                        <a href="/password-reset/recoverpwd" class="btn btn-outline-dark w-100 mt-2">Forgot your password?</a>
+                        <a href="/password-reset/recoverpwd" class="btn btn-primary w-100">Forgot your password?</a>
                       </p>
   
                       <p class="mt-3 text-center">
-                        Don't have an account? <a href="/signup" class="btn btn-outline-dark w-100 mt-2">Sign up here</a>
+                        Don't have an account? <a href="/signup" class="btn btn-primary w-100">Sign up here</a>
                       </p>
                     </div>
                   </div>
