--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -51,7 +51,7 @@
           <div class="col-lg-8">
             <div class="card auth-card">
               <div class="top-nav">
-                <a href="/" class="btn btn-outline-dark rounded-pill shadow-sm">
+                <a href="/" class="btn btn-primary w-100 rounded-pill shadow-sm">
                   <i class="ri-home-4-line"></i> Back to Home
                 </a>
               </div>
@@ -87,6 +87,16 @@
                           <div class="text-danger error-message" id="locationError"></div>
                         </div>
 
+                        <div class="mb-3" >
+                          <select class="form-control" id="role" name="role" required />
+                              <option value="">Select Role</option>
+                              <option value="sales">Sales</option>
+                              <option value="admin">Admin</option>
+                              <option value="manager">Manager</option>
+                          </select>
+                          <div class="text-danger error-message" id="roleError"></div>
+                      </div>
+
                         <input type="hidden" id="tenant_id" value="123" />
 
                         <div class="form-check mb-3">
@@ -96,9 +106,7 @@
                           </label>
                         </div>
                         
-                        
-                        
-
+                      
                         <div class="text-center">
                           <button type="submit" class="btn btn-primary w-100">Sign Up</button>
                         </div>
@@ -106,7 +114,7 @@
 
                       <p class="mt-3 text-center">
                         Already have an account?
-                        <a href="/login" class="text-primary fw-bold">Login here</a>
+                        <a href="/login" class="btn btn-primary w-100">Login here</a>
                       </p>
                     </div>
                   </div>
@@ -174,6 +182,7 @@
           location: $("#location").val(),
           password: $("#password").val(),
           confirm_password: $("#confirm_password").val(),
+          role: $("#role").val(),
         };
 
         $.ajax({
